fix: wrong sizing of the card on mobile and adding wrapper around the image

--- a/style.css
+++ b/style.css
@@ -15,7 +15,10 @@
 }
 
 body {
-    background-color: #d6e1ff;
+    background-image: url(images/pattern-background-mobile.svg);
+    background-color: var(--pale-blue);
+    background-repeat: no-repeat;
+    background-size: contain;
     font-family: 'Red Hat Display', sans-serif;
     min-width: 375px;
     display: flex;
@@ -29,7 +32,7 @@ body {
     max-width: 400px;
 
     width: 90%;
-    height: 70%;
+    height: 640px;
     display: grid;
     align-items: center;
     grid-template-rows: 1fr 1.2fr 0.8fr 1fr;
@@ -143,7 +146,7 @@ body {
 
 .attribution {
     position: fixed;
-    bottom: 3px;
+    bottom: 10px;
     font-size: 11px;
     text-align: center;
 }
